<resources>
    <string name="app_name">Tip Calculator</string>

    <string name="main_msg_billamount">Bill Amount</string>
    <string name="main_hint_billamount">Enter Bill Amount Here</string>
    <string name="main_msg_servicerating">Service Rating</string>


    <string name="main_msg_tippercent">%s%%Tip Percent</string>
    <string name="main_msg_tipptotal">$%sTipTotal</string>
    <string name="main_msg_biltotal">Bill Total</string>
    <string name="main_msg_billtotalresult">$%s</string>

</resources>
